[package]
name = "openwrt-network-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
env_logger = "0.11.1"
get_if_addrs = "0.5.3"
ip_network = "0.4.1"
ll-neighbors = "0.1.6"
log = "0.4.20"
